K1J-358: Logging in json-format in alignment with ECS. Performance logging on SOAP and REST apis. Handle trace.id, span.id and session.id. (#218)